--- a/_src/index.html
+++ b/_src/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="fonts/font-awesome-4.6.2/css/font-awesome.min.css">
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Overlock:400,700|
               Oswald|Roboto:400,400italic,700,700italic|Bangers|Orbitron:900,400' type='text/css'>
+        <script src="js/imageManips.js"></script>
         <title>Meme... He said Meeemeee.</title>
     </head>
 
@@ -36,7 +37,7 @@
                     <div class="col s12">
                         <div class="card-panel grey darken-4 z-depth-1 white-text">
                             <div class="row">
-                            <!-- Image Modifiers -->
+                                <!-- Image Modifiers -->
                                 <span class="col s6">
                                     <p class="range-field">
                                         <input id="scale" type="range" min="0.1" max="4" value="1" step="0.1"/>
@@ -50,6 +51,22 @@
                                     </p>
                                 </span>
                             </div>
+
+                            <!-- Image Filters -->
+                            <div class="row">
+
+                                    <button class="waves-effect btn red" id="invert">invert</button>
+
+                                    <button class="waves-effect btn red" id="chroma">chroma</button>
+
+                                    <button class="waves-effect btn red" id="greyscale">greyscale</button>
+
+                                    <button class="waves-effect btn red" id="vibrant">vibrant</button>
+
+                                    <button class="waves-effect btn red" id="revert">revert</button>
+
+                            </div>
+
                             <!-- Text Input -->
                             <div class="row">
                                 <span class="input-field col s6">
@@ -76,15 +93,11 @@
                             </div>
                             <div class="row">
                                 <div class="col s12">
-                                    <div class="left">
-                                        <button class="waves-effect btn red" id="save">save
-                                            <i class="fa fa-floppy-o right"></i>
-                                        </button>
-                                    </div>
-                                    <div class="right">
-                                        <a class="waves-effect btn red" href="" id="img-download" download="you-got-memed.png">
-                                            <i class="fa fa-download right"></i>download</a>
-                                    </div>
+                                    <button class="waves-effect btn red left" id="save">save
+                                        <i class="fa fa-floppy-o right"></i>
+                                    </button>
+                                    <a class="waves-effect btn red right" href="" id="img-download" download="you-got-memed.png">
+                                        <i class="fa fa-download right"></i>download</a>
                                 </div>
                             </div>
                         </div>
