--- a/_src/index.html
+++ b/_src/index.html
@@ -1,130 +1,112 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#000000">
-        <link rel="manifest" href="manifest.json">
-        <link rel="stylesheet" href="css/materialize.css" media="screen,projection">
-        <link rel="stylesheet" href="css/sweetalert.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="fonts/font-awesome-4.6.2/css/font-awesome.min.css">
-        <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Overlock:400,700|
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#000000">
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="css/materialize.css" media="screen,projection">
+  <link rel="stylesheet" href="css/sweetalert.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="fonts/font-awesome-4.6.2/css/font-awesome.min.css">
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Overlock:400,700|
               Oswald|Roboto:400,400italic,700,700italic|Bangers|Orbitron:900,400' type='text/css'>
-        <script src="js/imageManips.js"></script>
-        <title>Meme... He said Meeemeee.</title>
-    </head>
+  <title>Meme... He said Meeemeee.</title>
+</head>
 
-    <body class="grey">
-        <div class="container">
-            <div class="section">
-                <div class="row">
-                    <div class="card-panel grey darken-4 z-depth-1 col s12">
-                        <span class="white-text col s12">
-                            <h5>Make Dank MEMEs</h5>
-                        </span>
-                    </div>
-                </div>
-                <div class="row">
-                    <canvas id="memeSpace" class="col push-s1 s10 grey darken-3">
-                        Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
-                    </canvas>
-                </div>
-                <div class="row">
-                    <div class="col s12">
-                        <div class="card-panel grey darken-4 z-depth-1 white-text">
-                            <div class="row">
-                                <!-- Image Modifiers -->
-                                <span class="col s6">
-                                    <p class="range-field">
-                                        <input id="scale" type="range" min="0.1" max="4" value="1" step="0.1"/>
-                                        <label for="scale">Image Scale</label>
-                                    </p>
-                                </span>
-                                <span class="col s6">
-                                    <p class="range-field">
-                                        <input id="rotate" type="range" min="-180" max="180" value="0" step="1"/>
-                                        <label for="rotate">Image Rotation</label>
-                                    </p>
-                                </span>
-                            </div>
-
-                            <!-- Image Filters -->
-                            <div class="row">
-
-                                    <button class="waves-effect btn red" id="invert">invert</button>
-
-                                    <button class="waves-effect btn red" id="chroma">chroma</button>
-
-                                    <button class="waves-effect btn red" id="greyscale">greyscale</button>
-
-                                    <button class="waves-effect btn red" id="vibrant">vibrant</button>
-
-                                    <button class="waves-effect btn red" id="revert">revert</button>
-
-                            </div>
-
-                            <!-- Text Input -->
-                            <div class="row">
-                                <span class="input-field col s6">
-                                    <input id="topLineText" type="text" value="yes i have a beard" onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
-                                    <label for="topLineText">Top Line:</label>
-                                </span>
-                                <span class="input-field col s6">
-                                    <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
-                                    <label for="bottomLineText">Bottom Line:</label>
-                                </span>
-                            </div>
-
-                            <!-- File Functions -->
-                            <div class="row">
-                                <div class="file-field input-field col push-m3 s12 m6">
-                                    <div class="btn red">
-                                        <span>File</span>
-                                        <input type="file" capture="camera" id="fileInput" name="imageLoader">
-                                    </div>
-                                    <div class="file-path-wrapper">
-                                        <input class="file-path validate" type="text">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col s12">
-                                    <button class="waves-effect btn red left" id="save">save
-                                        <i class="fa fa-floppy-o right"></i>
-                                    </button>
-                                    <a class="waves-effect btn red right" href="" id="img-download" download="you-got-memed.png">
-                                        <i class="fa fa-download right"></i>download</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<body class="grey">
+  <div class="container">
+    <div class="section">
+      <div class="row">
+        <div class="col s12">
+          <div class="card grey darken-4 z-depth-2">
+            <div class="card-content white-text">
+              <span class="card-title col s12">Make Dank MEMEs</span>
+              <canvas id="memeSpace" class="col push-s2 s8">
+                Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
+              </canvas>
             </div>
-            <span id="spinner-div" style="display:none"><img src='img/key/spinner-128.gif' width='24' height='24' id='spinner'/></span>
+            <div class="card-action">
+              <div class="row">
+                <div class="col s6">
+                  <p class="range-field">
+                    <input id="scale" type="range" min="0.1" max="4" value="1" step="0.1" />
+                    <label for="scale">Image Scale</label>
+                  </p>
+                </div>
+                <div class="col s6">
+                  <p class="range-field">
+                    <input id="rotate" type="range" min="-180" max="180" value="0" step="1" />
+                    <label for="rotate">Image Rotation</label>
+                  </p>
+                </div>
+              </div>
+              <!-- Text Input -->
+              <div class="row">
+                <div class="input-field col s6">
+                  <input id="topLineText" type="text" value="yes i have a beard" onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
+                  <label for="topLineText">Top Line:</label>
+                </div>
+                <div class="input-field col s6">
+                  <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
+                  <label for="bottomLineText">Bottom Line:</label>
+                </div>
+              </div>
+
+              <!-- File Functions -->
+              <div class="row">
+                <div class="file-field input-field col push-m3 s12 m6">
+                  <div class="btn red">
+                    <span>File</span>
+                    <input type="file" capture="camera" id="fileInput" name="imageLoader">
+                  </div>
+                  <div class="file-path-wrapper">
+                    <input class="file-path validate" type="text">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col s12">
+                  <div class="left">
+                    <button class="waves-effect btn red" id="save">save
+                      <i class="fa fa-floppy-o right"></i>
+                    </button>
+                  </div>
+                  <div class="right">
+                    <a class="waves-effect btn red" href="" id="img-download" download="you-got-memed.png">
+                      <i class="fa fa-download right"></i>download</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+    <span id="spinner-div" style="display:none"><img src='img/key/spinner-128.gif' width='24' height='24' id='spinner'/></span>
+  </div>
 
-        <footer class="page-footer grey darken-4">
-            <div class="container">
-                <div class="row"></div>
-            </div>
-            <div class="footer-copyright">
-                <div class="container">
-                    © 2016 Copyright Mark N Carpenter Jr
-                </div>
-            </div>
-        </footer>
+  <footer class="page-footer grey darken-4">
+    <div class="container">
+      <div class="row"></div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2016 Copyright Mark N Carpenter Jr
+      </div>
+    </div>
+  </footer>
 
-        <img src='img/key/bsc.jpg' style='display:none' class='mfnotransform' id='sample-image'/>
+  <img src='img/key/bsc.jpg' style='display:none' class='mfnotransform' id='sample-image' />
 
-        <script src="js/jquery.js"></script>
-        <script src="js/materialize.js"></script>
-        <script src="js/sweetalert-dev.js"></script>
-        <script src="js/engine.js"></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/sweetalert-dev.js"></script>
+  <script src="js/engine.js"></script>
 
-    </body>
+</body>
 
 </html>
