--- a/_src/index.html
+++ b/_src/index.html
@@ -12,77 +12,91 @@
   <link rel="stylesheet" href="css/sweetalert.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="fonts/font-awesome-4.6.2/css/font-awesome.min.css">
-  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Overlock:400,700|
-              Oswald|Roboto:400,400italic,700,700italic|Bangers|Orbitron:900,400' type='text/css'>
+  <script src="js/imageManips.js"></script>
   <title>Meme... He said Meeemeee.</title>
 </head>
 
-<body class="grey">
+<body class="grey darken-2">
   <div class="container">
     <div class="section">
       <div class="row">
-        <div class="col s12">
-          <div class="card grey darken-4 z-depth-2">
-            <div class="card-content white-text">
-              <span class="card-title col s12">Make Dank MEMEs</span>
-              <canvas id="memeSpace" class="col push-s2 s8">
-                Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
-              </canvas>
-            </div>
-            <div class="card-action">
-              <div class="row">
-                <div class="col s6">
-                  <p class="range-field">
-                    <input id="scale" type="range" min="0.1" max="4" value="1" step="0.1" />
-                    <label for="scale">Image Scale</label>
-                  </p>
-                </div>
-                <div class="col s6">
-                  <p class="range-field">
-                    <input id="rotate" type="range" min="-180" max="180" value="0" step="1" />
-                    <label for="rotate">Image Rotation</label>
-                  </p>
-                </div>
-              </div>
-              <!-- Text Input -->
-              <div class="row">
-                <div class="input-field col s6">
-                  <input id="topLineText" type="text" value="yes i have a beard" onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
-                  <label for="topLineText">Top Line:</label>
-                </div>
-                <div class="input-field col s6">
-                  <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
-                  <label for="bottomLineText">Bottom Line:</label>
-                </div>
-              </div>
+        <div class="col s12 card-panel grey darken-4 z-depth-2 white-text">
+          <span class="card-title col s12"><h3>Make Dank MEMEs</h3></span>
+        </div>
+      </div>
+      <div class="row">
+        <canvas id="memeSpace" class="col push-s1 s10 grey darken-3">
+          Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
+        </canvas>
+      </div>
+    </div>
 
-              <!-- File Functions -->
-              <div class="row">
-                <div class="file-field input-field col push-m3 s12 m6">
-                  <div class="btn red">
-                    <span>File</span>
-                    <input type="file" capture="camera" id="fileInput" name="imageLoader">
-                  </div>
-                  <div class="file-path-wrapper">
-                    <input class="file-path validate" type="text">
-                  </div>
-                </div>
+    <div class="section">
+      <div class="row">
+        <div class="col s12 card-panel grey darken-4 z-depth-2 white-text">
+          <div class="row">
+            <div class="col s6">
+              <p class="range-field">
+                <input id="scale" type="range" min="0.1" max="4" value="1" step="0.1" />
+                <label for="scale">Image Scale</label>
+              </p>
+            </div>
+            <div class="col s6">
+              <p class="range-field">
+                <input id="rotate" type="range" min="-180" max="180" value="0" step="1" />
+                <label for="rotate">Image Rotation</label>
+              </p>
+            </div>
+          </div>
+
+          <!-- Text Input -->
+          <div class="row">
+            <div class="input-field col s6">
+              <input id="topLineText" type="text" value="yes i have a beard" onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
+              <label for="topLineText">Top Line:</label>
+            </div>
+            <div class="input-field col s6">
+              <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
+              <label for="bottomLineText">Bottom Line:</label>
+            </div>
+          </div>
+
+          <!-- Image Filters -->
+          <div class="row center-align">
+            <button class="btn waves-effect orange darken-1" id="invert">Invert</button>
+            <button class="btn waves-effect orange darken-1" id="greyscale">Greyscale</button>
+            <button class="btn waves-effect orange darken-1" id="vibrant">Vibrant</button>
+            <button class="btn waves-effect red" id="revert">Revert to Original</button>
+
+          </div>
+
+          <!-- File Functions -->
+          <div class="row">
+            <div class="file-field input-field col push-m3 s12 m6">
+              <div class="btn red">
+                <span>File</span>
+                <input type="file" capture="camera" id="fileInput" name="imageLoader">
               </div>
-              <div class="row">
-                <div class="col s12">
-                  <div class="left">
-                    <button class="waves-effect btn red" id="save">save
-                      <i class="fa fa-floppy-o right"></i>
-                    </button>
-                  </div>
-                  <div class="right">
-                    <a class="waves-effect btn red" href="" id="img-download" download="you-got-memed.png">
-                      <i class="fa fa-download right"></i>download</a>
-                  </div>
-                </div>
+              <div class="file-path-wrapper">
+                <input class="file-path validate" type="text">
               </div>
             </div>
           </div>
+
+          <div class="row">
+            <div class="col s12">
+              <div class="left">
+                <button class="waves-effect btn red" id="save">save
+                  <i class="fa fa-floppy-o right"></i>
+                </button>
+              </div>
+              <div class="right">
+                <a class="waves-effect btn red" href="" id="img-download" download="you-got-memed.png">
+                  <i class="fa fa-download right"></i>download</a>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -106,6 +120,7 @@
   <script src="js/materialize.js"></script>
   <script src="js/sweetalert-dev.js"></script>
   <script src="js/engine.js"></script>
+  <script src="js/worker.js"></script>
 
 </body>
 
