--- a/index.html
+++ b/index.html
@@ -1,117 +1,142 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#000000">
-        <link rel="manifest" href="manifest.json">
-        <link rel="stylesheet" href="css/materialize.css" media="screen,projection">
-        <link rel="stylesheet" href="css/sweetalert.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="fonts/font-awesome-4.6.2/css/font-awesome.min.css">
-        <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Overlock:400,700|
-              Oswald|Roboto:400,400italic,700,700italic|Bangers|Orbitron:900,400' type='text/css'>
-        <title>Meme... He said Meeemeee.</title>
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#212121">
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="css/materialize.css" media="screen,projection">
+  <link rel="stylesheet" href="css/sweetalert.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="fonts/font-awesome-4.6.2/css/font-awesome.min.css">
+  <script src="js/imageManips.js"></script>
+  <title>Meme... He said Meeemeee.</title>
+</head>
 
-    <body class="grey">
-        <div class="container">
-            <div class="section">
-                <div class="row">
-                    <div class="card-panel grey darken-4 z-depth-1 col s12">
-                        <span class="white-text col s12">
-                            <h5>Make Dank MEMEs</h5>
-                        </span>
-                    </div>
-                </div>
-                <div class="row">
-                    <canvas id="memeSpace" class="col push-s1 s10 grey darken-3">
-                        Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
-                    </canvas>
-                </div>
-                <div class="row">
-                    <div class="col s12">
-                        <div class="card-panel grey darken-4 z-depth-1 white-text">
-                            <div class="row">
-                            <!-- Image Modifiers -->
-                                <span class="col s6">
-                                    <p class="range-field">
-                                        <input id="scale" type="range" min="0.1" max="4" value="1" step="0.1"/>
-                                        <label for="scale">Image Scale</label>
-                                    </p>
-                                </span>
-                                <span class="col s6">
-                                    <p class="range-field">
-                                        <input id="rotate" type="range" min="-180" max="180" value="0" step="1"/>
-                                        <label for="rotate">Image Rotation</label>
-                                    </p>
-                                </span>
-                            </div>
-                            <!-- Text Input -->
-                            <div class="row">
-                                <span class="input-field col s6">
-                                    <input id="topLineText" type="text" value="yes i have a beard" onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
-                                    <label for="topLineText">Top Line:</label>
-                                </span>
-                                <span class="input-field col s6">
-                                    <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
-                                    <label for="bottomLineText">Bottom Line:</label>
-                                </span>
-                            </div>
-
-                            <!-- File Functions -->
-                            <div class="row">
-                                <div class="file-field input-field col push-m3 s12 m6">
-                                    <div class="btn red">
-                                        <span>File</span>
-                                        <input type="file" capture="camera" id="fileInput" name="imageLoader">
-                                    </div>
-                                    <div class="file-path-wrapper">
-                                        <input class="file-path validate" type="text">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col s12">
-                                    <div class="left">
-                                        <button class="waves-effect btn red" id="save">save
-                                            <i class="fa fa-floppy-o right"></i>
-                                        </button>
-                                    </div>
-                                    <div class="right">
-                                        <a class="waves-effect btn red" href="" id="img-download" download="you-got-memed.png">
-                                            <i class="fa fa-download right"></i>download</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <span id="spinner-div" style="display:none"><img src='img/key/spinner-128.gif' width='24' height='24' id='spinner'/></span>
+<body class="grey darken-2">
+  <div class="container">
+    <div class="section">
+      <div class="row">
+        <div class="col s12 card-panel grey darken-4 z-depth-2 white-text">
+          <span class="card-title col s12"><h4>Make Dank MEMEs</h4></span>
         </div>
+      </div>
+      <div class="row">
+        <canvas id="memeSpace" class="col s12 grey darken-3 z-depth-1">
+          Sorry... Your browser doesn't support canvas... Try Googling "Chrome".
+        </canvas>
+      </div>
+    </div>
 
-        <footer class="page-footer grey darken-4">
-            <div class="container">
-                <div class="row"></div>
+    <div class="section">
+      <div class="row">
+        <div class="col s12 card-panel grey darken-4 z-depth-2 white-text">
+          <div class="row">
+            <div class="col s6">
+              <p class="range-field">
+                <input id="scale" type="range" min="0.1" max="4" value="1" step="0.1" />
+                <label for="scale">Image Scale</label>
+              </p>
             </div>
-            <div class="footer-copyright">
-                <div class="container">
-                    © 2016 Copyright Mark N Carpenter Jr
+            <div class="col s6">
+              <p class="range-field">
+                <input id="rotate" type="range" min="-180" max="180" value="0" step="5" />
+                <label for="rotate">Image Rotation</label>
+              </p>
+            </div>
+          </div>
+
+          <!-- Text Input -->
+          <div class="row">
+            <div class="input-field col s6">
+              <input id="topLineText" type="text" value="yes i have a beard" onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
+              <label for="topLineText">Top Line:</label>
+            </div>
+            <div class="input-field col s6">
+              <input id="bottomLineText" type="text" value="it is awesome. . ." onkeyup='doTransform()' oninput='doTransform' onpaste='doTransform'>
+              <label for="bottomLineText">Bottom Line:</label>
+            </div>
+          </div>
+
+          <!-- Image Filters -->
+          <div class="row center-align">
+            <button class="btn waves-effect orange darken-1" id="invert">Invert</button>
+            <button class="btn waves-effect orange darken-1" id="greyscale">Greyscale</button>
+            <button class="btn waves-effect orange darken-1" id="vibrant">Vibrant</button>
+          </div>
+          <div class="row center-align">
+            <button class="btn waves-effect orange darken-1" id="nightvision">NightVision</button>
+            <button class="btn waves-effect red" id="revert">Revert to Original</button>
+          </div>
+
+          <!-- File Functions -->
+          <div class="row hide-on-small-only">
+            <div class="col s12">
+              <div class="file-field input-field col s8 m6">
+                <div class="btn red">
+                  <span>File</span>
+                  <input type="file" capture="camera" id="fileInput" name="imageLoader">
                 </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text">
+                </div>
+              </div>
+              <div class="right">
+                <button class="waves-effect btn-large red" href="" id="img-download" download="you-got-memed.png">
+                  <i class="fa fa-download right"></i>download</button>
+              </div>
             </div>
-        </footer>
+          </div>
 
-        <img src='img/key/bsc.jpg' style='display:none' class='mfnotransform' id='sample-image'/>
+          <div class="row hide-on-med-and-up">
+            <div class="row">
+              <div class="file-field input-field col s10 push-s1">
+                <div class="btn red">
+                  <span>File</span>
+                  <input type="file" capture="camera" id="fileInput" name="imageLoader">
+                </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text">
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col s12">
+                <div class="center-align">
+                  <a class="waves-effect btn-large red" href="" id="img-download" download="you-got-memed.png">
+                    <i class="fa fa-download right"></i>download</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 
-        <script src="js/jquery.js"></script>
-        <script src="js/materialize.js"></script>
-        <script src="js/sweetalert-dev.js"></script>
-        <script src="js/engine.js"></script>
+  <footer class="page-footer grey darken-4">
+    <div class="container">
+      <div class="row"></div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2016 Copyright Mark N Carpenter Jr
+      </div>
+    </div>
+  </footer>
 
-    </body>
+  <img src='img/key/bsc.jpg' style='display:none' class='mfnotransform' id='sample-image' />
+
+  <script src="js/jquery.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/sweetalert-dev.js"></script>
+  <script src="js/engine.js"></script>
+  <script src="js/worker.js"></script>
+
+</body>
 
 </html>
